manifest_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-replicas
  labels:
    app:  my-web-application
    env: prod
    owner: IlliaKorniienko
spec:
  replicas: 3
  selector:
    matchLabels:
      project: kig-it
  template:
    metadata:
      labels:
        project: kig-it
    spec:
      containers: 
        - name : kig-it-web
          image: korniienkoi/test_k8s_php:v.1.0.5
          ports:
          - containerPort: 80
