manifest_4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app:  my-web-application
    env: prod
    owner: IlliaKorniienko
spec:
  selector:
    matchLabels:
      project: kig-it-test
  template:
    metadata:
      labels:
        project: kig-it-test
    spec:
      containers: 
        - name : kig-it-prod
          image: korniienkoi/test_k8s_php:v.1.0.5
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
    env: prod
    owner: IlliaKorniienko
spec:
  selector:
    project: kig-it-test
  ports:
    - name: app-listener
      protocol: TCP
      port: 80 
      targetPort: 80
  type: LoadBalancer
