manifest_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wed-deploy
  labels:
    app: wed-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  templete:
    metadata:
      labels:
        app: my-app     # Service will look for those Pods labels
    spec:
      containers:
        - name: kig-web
          image: korniienkoi/test_k8s_php:v.1.0.5
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pod-service
  labels:
    env: prod
    owner: IlliaKorniienko 
spec:
  selector:
    app: my-app
  ports:
    - name: app-listener
      protocol: TCP
      port: 80  # Port on LoadBalancer
      targetPort: 80  # Port on Pod
  type: LoadBalancer
